test/solc-verify/issues/Issue093.sol
pragma solidity >=0.5.0;
contract A {
  int constant c = 0;
  constructor() public {
    assembly {}
  }
}